--- a/dashrobot.html
+++ b/dashrobot.html
@@ -2,8 +2,7 @@
 
 <head>
 <link href='https://fonts.googleapis.com/css?family=Poller+One' rel='stylesheet' type='text/css'>
-<script src="/assets/jquery.js"></script>
-<style>
+<script src="https://code.jquery.com/jquery-3.6.0.slim.js" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script><style>
 body{
   background: rgba(red, green, blue, 1);
   }
