--- a/dashrobot.html
+++ b/dashrobot.html
@@ -143,7 +143,7 @@ img {
 <button class="color">change color!</button>
 <button class="moves">stop dancing</button>
 
-<img src="/assets/dance_cotter.gif">
+<img src="https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2734&q=80>
 <script>
 // When eyes button is clicked, toggle laser class on brain
 $(".flash").click(function() {
